Kaggle Notebook | TensorFlow 2 quickstart for beginners | Version 2

--- a/tensorflow-2-quickstart-for-beginners.ipynb
+++ b/tensorflow-2-quickstart-for-beginners.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8625614f",
+   "id": "600817f8",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:06.139265Z",
-     "iopub.status.busy": "2024-01-05T12:56:06.138758Z",
-     "iopub.status.idle": "2024-01-05T12:56:06.586985Z",
-     "shell.execute_reply": "2024-01-05T12:56:06.585527Z"
+     "iopub.execute_input": "2024-01-05T13:05:08.150122Z",
+     "iopub.status.busy": "2024-01-05T13:05:08.149638Z",
+     "iopub.status.idle": "2024-01-05T13:05:08.595589Z",
+     "shell.execute_reply": "2024-01-05T13:05:08.594559Z"
     },
     "papermill": {
-     "duration": 0.457492,
-     "end_time": "2024-01-05T12:56:06.589919",
+     "duration": 0.456802,
+     "end_time": "2024-01-05T13:05:08.598481",
      "exception": false,
-     "start_time": "2024-01-05T12:56:06.132427",
+     "start_time": "2024-01-05T13:05:08.141679",
      "status": "completed"
     },
     "tags": []
@@ -44,21 +44,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3631b7cd",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004263,
+     "end_time": "2024-01-05T13:05:08.607747",
+     "exception": false,
+     "start_time": "2024-01-05T13:05:08.603484",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Set up TensorFlow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7a2fae28",
+   "id": "5ea3a3ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:06.599993Z",
-     "iopub.status.busy": "2024-01-05T12:56:06.599355Z",
-     "iopub.status.idle": "2024-01-05T12:56:20.997414Z",
-     "shell.execute_reply": "2024-01-05T12:56:20.995937Z"
+     "iopub.execute_input": "2024-01-05T13:05:08.618832Z",
+     "iopub.status.busy": "2024-01-05T13:05:08.618233Z",
+     "iopub.status.idle": "2024-01-05T13:05:22.160578Z",
+     "shell.execute_reply": "2024-01-05T13:05:22.159638Z"
     },
     "papermill": {
-     "duration": 14.405923,
-     "end_time": "2024-01-05T12:56:21.000091",
+     "duration": 13.550591,
+     "end_time": "2024-01-05T13:05:22.162674",
      "exception": false,
-     "start_time": "2024-01-05T12:56:06.594168",
+     "start_time": "2024-01-05T13:05:08.612083",
      "status": "completed"
     },
     "tags": []
@@ -78,21 +95,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c49b4a8b",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004335,
+     "end_time": "2024-01-05T13:05:22.171769",
+     "exception": false,
+     "start_time": "2024-01-05T13:05:22.167434",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Load a dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3849d7ad",
+   "id": "562b325f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:21.010493Z",
-     "iopub.status.busy": "2024-01-05T12:56:21.009586Z",
-     "iopub.status.idle": "2024-01-05T12:56:22.833517Z",
-     "shell.execute_reply": "2024-01-05T12:56:22.832207Z"
+     "iopub.execute_input": "2024-01-05T13:05:22.183877Z",
+     "iopub.status.busy": "2024-01-05T13:05:22.182363Z",
+     "iopub.status.idle": "2024-01-05T13:05:23.109715Z",
+     "shell.execute_reply": "2024-01-05T13:05:23.108627Z"
     },
     "papermill": {
-     "duration": 1.832334,
-     "end_time": "2024-01-05T12:56:22.836366",
+     "duration": 0.936062,
+     "end_time": "2024-01-05T13:05:23.112358",
      "exception": false,
-     "start_time": "2024-01-05T12:56:21.004032",
+     "start_time": "2024-01-05T13:05:22.176296",
      "status": "completed"
     },
     "tags": []
@@ -103,7 +137,7 @@
      "output_type": "stream",
      "text": [
       "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 1s 0us/step\n"
+      "11490434/11490434 [==============================] - 0s 0us/step\n"
      ]
     }
    ],
@@ -115,21 +149,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b15d825",
+   "metadata": {
+    "papermill": {
+     "duration": 0.0049,
+     "end_time": "2024-01-05T13:05:23.122542",
+     "exception": false,
+     "start_time": "2024-01-05T13:05:23.117642",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Build a machine learning model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "945cf7fe",
+   "id": "91b31a60",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:22.849604Z",
-     "iopub.status.busy": "2024-01-05T12:56:22.848578Z",
-     "iopub.status.idle": "2024-01-05T12:56:23.041342Z",
-     "shell.execute_reply": "2024-01-05T12:56:23.039825Z"
+     "iopub.execute_input": "2024-01-05T13:05:23.135315Z",
+     "iopub.status.busy": "2024-01-05T13:05:23.134492Z",
+     "iopub.status.idle": "2024-01-05T13:05:23.343533Z",
+     "shell.execute_reply": "2024-01-05T13:05:23.342258Z"
     },
     "papermill": {
-     "duration": 0.202756,
-     "end_time": "2024-01-05T12:56:23.044452",
+     "duration": 0.218872,
+     "end_time": "2024-01-05T13:05:23.346549",
      "exception": false,
-     "start_time": "2024-01-05T12:56:22.841696",
+     "start_time": "2024-01-05T13:05:23.127677",
      "status": "completed"
     },
     "tags": []
@@ -147,19 +198,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f5b031d4",
+   "id": "0ec05312",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:23.056679Z",
-     "iopub.status.busy": "2024-01-05T12:56:23.056222Z",
-     "iopub.status.idle": "2024-01-05T12:56:23.094919Z",
-     "shell.execute_reply": "2024-01-05T12:56:23.093732Z"
+     "iopub.execute_input": "2024-01-05T13:05:23.359725Z",
+     "iopub.status.busy": "2024-01-05T13:05:23.359203Z",
+     "iopub.status.idle": "2024-01-05T13:05:23.400455Z",
+     "shell.execute_reply": "2024-01-05T13:05:23.399520Z"
     },
     "papermill": {
-     "duration": 0.047894,
-     "end_time": "2024-01-05T12:56:23.097569",
+     "duration": 0.050499,
+     "end_time": "2024-01-05T13:05:23.402609",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.049675",
+     "start_time": "2024-01-05T13:05:23.352110",
      "status": "completed"
     },
     "tags": []
@@ -168,8 +219,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.58908916, -0.08848917,  0.3024152 , -0.29904336, -0.48260868,\n",
-       "         0.27440912,  0.73068774, -0.01318705, -0.5007279 , -0.7305978 ]],\n",
+       "array([[-0.30459166, -0.6199203 ,  0.54208046, -0.57445407,  0.3092195 ,\n",
+       "         0.24618846,  0.3645942 , -0.48405588, -0.5603012 , -0.9089959 ]],\n",
        "      dtype=float32)"
       ]
      },
@@ -186,19 +237,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5c15152d",
+   "id": "1ed41163",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:23.110595Z",
-     "iopub.status.busy": "2024-01-05T12:56:23.109266Z",
-     "iopub.status.idle": "2024-01-05T12:56:23.123842Z",
-     "shell.execute_reply": "2024-01-05T12:56:23.122579Z"
+     "iopub.execute_input": "2024-01-05T13:05:23.415978Z",
+     "iopub.status.busy": "2024-01-05T13:05:23.415273Z",
+     "iopub.status.idle": "2024-01-05T13:05:23.427519Z",
+     "shell.execute_reply": "2024-01-05T13:05:23.426716Z"
     },
     "papermill": {
-     "duration": 0.023794,
-     "end_time": "2024-01-05T12:56:23.126578",
+     "duration": 0.021284,
+     "end_time": "2024-01-05T13:05:23.429482",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.102784",
+     "start_time": "2024-01-05T13:05:23.408198",
      "status": "completed"
     },
     "tags": []
@@ -207,8 +258,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.05750251, 0.09486252, 0.14023688, 0.07685146, 0.06396328,\n",
-       "        0.1363639 , 0.21520813, 0.1022817 , 0.06281475, 0.04991492]],\n",
+       "array([[0.07989707, 0.05828883, 0.18630987, 0.06100018, 0.14760655,\n",
+       "        0.1385899 , 0.15601076, 0.0667714 , 0.06186964, 0.04365574]],\n",
        "      dtype=float32)"
       ]
      },
@@ -224,19 +275,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "427782de",
+   "id": "216204b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:23.140798Z",
-     "iopub.status.busy": "2024-01-05T12:56:23.140360Z",
-     "iopub.status.idle": "2024-01-05T12:56:23.145816Z",
-     "shell.execute_reply": "2024-01-05T12:56:23.144696Z"
+     "iopub.execute_input": "2024-01-05T13:05:23.442671Z",
+     "iopub.status.busy": "2024-01-05T13:05:23.441554Z",
+     "iopub.status.idle": "2024-01-05T13:05:23.446460Z",
+     "shell.execute_reply": "2024-01-05T13:05:23.445673Z"
     },
     "papermill": {
-     "duration": 0.015094,
-     "end_time": "2024-01-05T12:56:23.148193",
+     "duration": 0.013529,
+     "end_time": "2024-01-05T13:05:23.448432",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.133099",
+     "start_time": "2024-01-05T13:05:23.434903",
      "status": "completed"
     },
     "tags": []
@@ -249,19 +300,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c51026c0",
+   "id": "f2d61dd4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:23.161422Z",
-     "iopub.status.busy": "2024-01-05T12:56:23.160256Z",
-     "iopub.status.idle": "2024-01-05T12:56:23.191969Z",
-     "shell.execute_reply": "2024-01-05T12:56:23.190417Z"
+     "iopub.execute_input": "2024-01-05T13:05:23.461601Z",
+     "iopub.status.busy": "2024-01-05T13:05:23.460837Z",
+     "iopub.status.idle": "2024-01-05T13:05:23.490361Z",
+     "shell.execute_reply": "2024-01-05T13:05:23.489131Z"
     },
     "papermill": {
-     "duration": 0.041022,
-     "end_time": "2024-01-05T12:56:23.194561",
+     "duration": 0.038816,
+     "end_time": "2024-01-05T13:05:23.492790",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.153539",
+     "start_time": "2024-01-05T13:05:23.453974",
      "status": "completed"
     },
     "tags": []
@@ -270,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "1.9924283"
+       "1.976236"
       ]
      },
      "execution_count": 8,
@@ -285,19 +336,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7763494c",
+   "id": "5d9c3042",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-05T12:56:23.207721Z",
-     "iopub.status.busy": "2024-01-05T12:56:23.207234Z",
-     "iopub.status.idle": "2024-01-05T12:56:23.228855Z",
-     "shell.execute_reply": "2024-01-05T12:56:23.227468Z"
+     "iopub.execute_input": "2024-01-05T13:05:23.506087Z",
+     "iopub.status.busy": "2024-01-05T13:05:23.505327Z",
+     "iopub.status.idle": "2024-01-05T13:05:23.535060Z",
+     "shell.execute_reply": "2024-01-05T13:05:23.533559Z"
     },
     "papermill": {
-     "duration": 0.03187,
-     "end_time": "2024-01-05T12:56:23.231808",
+     "duration": 0.039936,
+     "end_time": "2024-01-05T13:05:23.538119",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.199938",
+     "start_time": "2024-01-05T13:05:23.498183",
      "status": "completed"
     },
     "tags": []
@@ -310,49 +361,221 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaf1fd49",
+   "cell_type": "markdown",
+   "id": "64162b69",
    "metadata": {
     "papermill": {
-     "duration": 0.005022,
-     "end_time": "2024-01-05T12:56:23.242674",
+     "duration": 0.005322,
+     "end_time": "2024-01-05T13:05:23.549606",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.237652",
+     "start_time": "2024-01-05T13:05:23.544284",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Train and evaluate your model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "256805d1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-05T13:05:23.562784Z",
+     "iopub.status.busy": "2024-01-05T13:05:23.562325Z",
+     "iopub.status.idle": "2024-01-05T13:06:05.984331Z",
+     "shell.execute_reply": "2024-01-05T13:06:05.983189Z"
+    },
+    "papermill": {
+     "duration": 42.470592,
+     "end_time": "2024-01-05T13:06:06.025630",
+     "exception": false,
+     "start_time": "2024-01-05T13:05:23.555038",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2965 - accuracy: 0.9138\n",
+      "Epoch 2/5\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1443 - accuracy: 0.9566\n",
+      "Epoch 3/5\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1080 - accuracy: 0.9673\n",
+      "Epoch 4/5\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0899 - accuracy: 0.9721\n",
+      "Epoch 5/5\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0747 - accuracy: 0.9768\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x7eecabe86050>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97f0c736",
+   "metadata": {
+    "papermill": {
+     "duration": 0.040675,
+     "end_time": "2024-01-05T13:06:06.106393",
+     "exception": false,
+     "start_time": "2024-01-05T13:06:06.065718",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ce9d5f9c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-05T13:06:06.186429Z",
+     "iopub.status.busy": "2024-01-05T13:06:06.185542Z",
+     "iopub.status.idle": "2024-01-05T13:06:07.165430Z",
+     "shell.execute_reply": "2024-01-05T13:06:07.164526Z"
+    },
+    "papermill": {
+     "duration": 1.023133,
+     "end_time": "2024-01-05T13:06:07.167891",
+     "exception": false,
+     "start_time": "2024-01-05T13:06:06.144758",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 - 1s - loss: 0.0794 - accuracy: 0.9760 - 608ms/epoch - 2ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.07936632633209229, 0.9760000109672546]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(x_test,  y_test, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b490016f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-05T13:06:07.250999Z",
+     "iopub.status.busy": "2024-01-05T13:06:07.249635Z",
+     "iopub.status.idle": "2024-01-05T13:06:07.283061Z",
+     "shell.execute_reply": "2024-01-05T13:06:07.281825Z"
+    },
+    "papermill": {
+     "duration": 0.077387,
+     "end_time": "2024-01-05T13:06:07.285869",
+     "exception": false,
+     "start_time": "2024-01-05T13:06:07.208482",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "probability_model = tf.keras.Sequential([\n",
+    "  model,\n",
+    "  tf.keras.layers.Softmax()\n",
+    "])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e182bcc",
+   "execution_count": 13,
+   "id": "76b40aef",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-05T13:06:07.460070Z",
+     "iopub.status.busy": "2024-01-05T13:06:07.459556Z",
+     "iopub.status.idle": "2024-01-05T13:06:07.474822Z",
+     "shell.execute_reply": "2024-01-05T13:06:07.473622Z"
+    },
     "papermill": {
-     "duration": 0.004953,
-     "end_time": "2024-01-05T12:56:23.253348",
+     "duration": 0.058351,
+     "end_time": "2024-01-05T13:06:07.477096",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.248395",
+     "start_time": "2024-01-05T13:06:07.418745",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 10), dtype=float32, numpy=\n",
+       "array([[1.4840071e-08, 4.7069690e-09, 2.4163787e-06, 3.2405464e-05,\n",
+       "        1.1832392e-12, 1.8444275e-07, 8.4459777e-13, 9.9996126e-01,\n",
+       "        1.8777318e-07, 3.4551354e-06],\n",
+       "       [2.4113326e-08, 8.5306256e-06, 9.9994993e-01, 3.9550989e-05,\n",
+       "        2.1590804e-17, 5.5076521e-07, 2.7487210e-09, 6.0305154e-15,\n",
+       "        1.4106516e-06, 6.2565784e-14],\n",
+       "       [1.3213220e-07, 9.9840313e-01, 7.4188792e-05, 3.2170603e-05,\n",
+       "        1.0397107e-04, 1.8387844e-05, 1.0666016e-05, 6.5763178e-04,\n",
+       "        6.9947413e-04, 2.4881646e-07],\n",
+       "       [9.9997652e-01, 2.5262675e-13, 2.2334760e-05, 2.9164772e-08,\n",
+       "        4.7251641e-10, 5.0328619e-08, 5.3735494e-07, 2.9578375e-08,\n",
+       "        4.9801437e-11, 5.2148732e-07],\n",
+       "       [2.6323787e-07, 8.2856344e-10, 2.2356489e-06, 3.5540939e-08,\n",
+       "        9.9902737e-01, 5.9833832e-07, 5.4563247e-07, 6.5416418e-05,\n",
+       "        1.1706676e-06, 9.0239575e-04]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_model(x_test[:5])\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "832a003c",
+   "id": "9a3f2eab",
    "metadata": {
     "papermill": {
-     "duration": 0.004904,
-     "end_time": "2024-01-05T12:56:23.263831",
+     "duration": 0.040052,
+     "end_time": "2024-01-05T13:06:07.557301",
      "exception": false,
-     "start_time": "2024-01-05T12:56:23.258927",
+     "start_time": "2024-01-05T13:06:07.517249",
      "status": "completed"
     },
     "tags": []
@@ -390,14 +613,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 22.245343,
-   "end_time": "2024-01-05T12:56:24.996947",
+   "duration": 65.488091,
+   "end_time": "2024-01-05T13:06:10.401108",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-05T12:56:02.751604",
+   "start_time": "2024-01-05T13:05:04.913017",
    "version": "2.4.0"
   }
  },
